--- a/common/macros.tex
+++ b/common/macros.tex
@@ -37,3 +37,7 @@
 \newcommand{\s}[1]{\left[ {#1} \right]}
 \newcommand{\br}[1]{\left\{ {#1} \right\}}
 \newcommand{\norm}[1]{\left|\left| {#1} \right|\right|}
+
+% Referencing equations
+\newcommand{\eqnref}[1]{Equation~\ref{#1}}
+\newcommand{\figref}[1]{Figure~\ref{#1}}
