--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,98 @@
+@book{sumisconv,
+  title={CRC standard probability and statistics tables and formulae},
+  author={Zwillinger, Daniel and Kokoska, Stephen},
+  year={1999},
+  pages = {31},
+  publisher={Crc Press}
+}
+
+@inproceedings{Song2019,
+  title={Generative modeling by estimating gradients of the data distribution},
+  author={Song, Yang and Ermon, Stefano},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={11918--11930},
+  year={2019}
+}
+
+@article{kingma2013auto,
+  title={Auto-encoding variational bayes},
+  author={Kingma, Diederik P and Welling, Max},
+  journal={arXiv preprint arXiv:1312.6114},
+  year={2013}
+}
+
+@article{pang_deep_2021,
+	title = {Deep {Learning} for {Anomaly} {Detection}: {A} {Review}},
+	volume = {54},
+	issn = {0360-0300},
+	url = {https://doi.org/10.1145/3439950},
+	doi = {10.1145/3439950},
+	number = {2},
+	journal = {ACM Comput. Surv.},
+	author = {Pang, Guansong and Shen, Chunhua and Cao, Longbing and Hengel, Anton Van Den},
+	month = mar,
+	year = {2021},
+	note = {Place: New York, NY, USA
+Publisher: Association for Computing Machinery},
+	keywords = {deep learning, Anomaly detection, outlier detection, novelty detection, one-class classification},
+}
+
+@inproceedings{ocsvm,
+  author={Yunqiang Chen and Xiang Sean Zhou and Huang, T.S.},
+  booktitle={Proceedings 2001 International Conference on Image Processing (Cat. No.01CH37205)}, 
+  title={One-class SVM for learning in image retrieval}, 
+  year={2001},
+  volume={1},
+  number={},
+  pages={34-37 vol.1},
+  doi={10.1109/ICIP.2001.958946}
+}
+
+
+@article{li_ecod_2022,
+	title = {Ecod: {Unsupervised} outlier detection using empirical cumulative distribution functions},
+	journal = {IEEE Transactions on Knowledge and Data Engineering},
+	author = {Li, Zheng and Zhao, Yue and Hu, Xiyang and Botta, Nicola and Ionescu, Cezar and Chen, George},
+	year = {2022},
+	note = {Publisher: IEEE},
+}
+
+@inproceedings{han2022adbench,
+    title={{ADB}ench: Anomaly Detection Benchmark},
+    author={Songqiao Han and Xiyang Hu and Hailiang Huang and Minqi Jiang and Yue Zhao},
+    booktitle={Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
+    year={2022},
+    url={https://openreview.net/forum?id=foA_SFQ9zo0}
+}
+
+@InProceedings{pmlr-v80-ruff18a,
+  title = 	 {Deep One-Class Classification},
+  author =       {Ruff, Lukas and Vandermeulen, Robert and Goernitz, Nico and Deecke, Lucas and Siddiqui, Shoaib Ahmed and Binder, Alexander and M{\"u}ller, Emmanuel and Kloft, Marius},
+  booktitle = 	 {Proceedings of the 35th International Conference on Machine Learning},
+  pages = 	 {4393--4402},
+  year = 	 {2018},
+  editor = 	 {Dy, Jennifer and Krause, Andreas},
+  volume = 	 {80},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {10--15 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v80/ruff18a/ruff18a.pdf},
+  url = 	 {https://proceedings.mlr.press/v80/ruff18a.html},
+}
+
+@article{ruff_unifying_2021,
+	title = {A {Unifying} {Review} of {Deep} and {Shallow} {Anomaly} {Detection}},
+	volume = {109},
+	issn = {1558-2256},
+	doi = {10.1109/JPROC.2021.3052449},
+	number = {5},
+	journal = {Proceedings of the IEEE},
+	author = {Ruff, Lukas and Kauffmann, Jacob R. and Vandermeulen, Robert A. and Montavon, Grégoire and Samek, Wojciech and Kloft, Marius and Dietterich, Thomas G. and Müller, Klaus-Robert},
+	month = may,
+	year = {2021},
+	pages = {756--795},
+}
+
 @article{anderson1982reverse,
   title={Reverse-time diffusion equation models},
   author={Anderson, Brian DO},
