added some autoencoder info

--- a/common/preamble.tex
+++ b/common/preamble.tex
@@ -8,7 +8,8 @@
 \usepackage[hang,flushmargin]{footmisc}
 
 % Citation style
-\usepackage{harvard}
+% \usepackage{harvard}
+\usepackage[square]{natbib}
 
 % Figures
 \usepackage{graphicx}
