--- a/diss.bib
+++ b/diss.bib
@@ -1,3 +1,74 @@
+@inproceedings{tschuchnig_anomaly_2022,
+	title = {Anomaly detection in medical imaging-a mini review},
+	booktitle = {Data {Science}–{Analytics} and {Applications}: {Proceedings} of the 4th {International} {Data} {Science} {Conference}–{iDSC2021}},
+	publisher = {Springer},
+	author = {Tschuchnig, Maximilian E and Gadermayr, Michael},
+	year = {2022},
+	pages = {33--38},
+}
+
+@inproceedings{baur_deep_2019,
+	title = {Deep autoencoding models for unsupervised anomaly segmentation in brain {MR} images},
+	booktitle = {Brainlesion: {Glioma}, {Multiple} {Sclerosis}, {Stroke} and {Traumatic} {Brain} {Injuries}: 4th {International} {Workshop}, {BrainLes} 2018, {Held} in {Conjunction} with {MICCAI} 2018, {Granada}, {Spain}, {September} 16, 2018, {Revised} {Selected} {Papers}, {Part} {I} 4},
+	publisher = {Springer},
+	author = {Baur, Christoph and Wiestler, Benedikt and Albarqouni, Shadi and Navab, Nassir},
+	year = {2019},
+	pages = {161--169},
+}
+
+
+@article{baur2021,
+title = {Autoencoders for unsupervised anomaly segmentation in brain MR images: A comparative study},
+journal = {Medical Image Analysis},
+volume = {69},
+pages = {101952},
+year = {2021},
+issn = {1361-8415},
+doi = {https://doi.org/10.1016/j.media.2020.101952},
+url = {https://www.sciencedirect.com/science/article/pii/S1361841520303169},
+author = {Christoph Baur and Stefan Denner and Benedikt Wiestler and Nassir Navab and Shadi Albarqouni},
+keywords = {Anomaly segmentation, Detection, Unsupervised, Brain MRI, Autoencoder, Variational, Adversarial, Generative, VAE-GAN, VAEGAN},
+}
+
+@article{bruno_understanding_2015,
+	title = {Understanding and {Confronting} {Our} {Mistakes}: {The} {Epidemiology} of {Error} in {Radiology} and {Strategies} for {Error} {Reduction}},
+	volume = {35},
+	issn = {0271-5333, 1527-1323},
+	shorttitle = {Understanding and {Confronting} {Our} {Mistakes}},
+	url = {http://pubs.rsna.org/doi/10.1148/rg.2015150023},
+	doi = {10.1148/rg.2015150023},
+	language = {en},
+	number = {6},
+	urldate = {2023-10-08},
+	journal = {RadioGraphics},
+	author = {Bruno, Michael A. and Walker, Eric A. and Abujudeh, Hani H.},
+	month = oct,
+	year = {2015},
+	pages = {1668--1676},
+}
+
+@article{kim_deep_2019,
+	title = {Deep learning in medical imaging},
+	volume = {16},
+	number = {4},
+	journal = {Neurospine},
+	author = {Kim, Mingyu and Yun, Jihye and Cho, Yongwon and Shin, Keewon and Jang, Ryoungwoo and Bae, Hyun-jin and Kim, Namkug},
+	year = {2019},
+	note = {Publisher: Korean Spinal Neurosurgery Society},
+	pages = {657},
+}
+
+@article{lee_deep_2017,
+	title = {Deep {Learning} in {Medical} {Imaging}: {General} {Overview}.},
+	volume = {18},
+	number = {4},
+	journal = {Korean Journal of Radiology},
+	author = {Lee, JG and Jun, S and Cho, YW and Lee, H and Kim, GB and Seo, JB and Kim, N},
+	year = {2017},
+	pages = {570--584},
+}
+
+
 @book{sumisconv,
   title={CRC standard probability and statistics tables and formulae},
   author={Zwillinger, Daniel and Kokoska, Stephen},
